--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "v4",
   "description": "Personal Website V4",
   "version": "1.0.0",
-  "author": "Brittany Chiang <brittany.chiang@gmail.com>",
+  "author": "Brayan Muñoz <balexander.munoz@udea.edu.co>",
   "repository": {
     "type": "git",
     "url": "https://github.com/bchiang7/v4"
